--- a/style.css
+++ b/style.css
@@ -59,3 +59,19 @@ html, body {
 .box.active {
     display: block;
 }
+
+.heading {
+    margin: 0;
+}
+
+.last-update:before {
+    content: "Letzte Aktualisierung: ";
+}
+
+table {
+    border-collapse: collapse;
+}
+tr, td {
+    padding: 0.1em 0.5em;
+    border: 1px solid #ccc;
+}
