--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ html, body {
     text-align: center;
     cursor: pointer;
 }
+
 button::-moz-focus-inner,
 input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
@@ -77,7 +78,12 @@ input[type="submit"]::-moz-focus-inner {
 table {
     border-collapse: collapse;
 }
+
 tr, td {
     padding: 0.1em 0.5em;
     border: 1px solid #ccc;
+}
+
+tr.qualified {
+    background-color: #51ffa9;
 }
