--- a/style.css
+++ b/style.css
@@ -97,6 +97,12 @@ td:nth-child(2) {
 }
 
 /* hardcoded font sizes for berlin-2020 */
+#box-0 {
+    font-size: 2em;
+}
+.info-text-0 {
+    margin: 0.4em;
+}
 #box-1 {
     font-size: 0.65em;
 }
